# CICD_DEMO

./: .Dockerfile  .dockerignore  .gitignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: streamlit-app-AutoDeployTrigger-ae0f26ba-a9b5-487e-9dd6-7a165c96f8ce.yml
.streamlit/: secrets.tmpl.toml
utils/: __init__.py  utils.py
