[project]
name = "cicdstreamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
